--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "format": "prettier --write ./src/**/*.*"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^1.0.0",
+    "classnames": "^2.3.2",
+    "framer-motion": "^7.5.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
+    "react-select": "^5.4.0",
+    "react-slick": "^0.29.0",
+    "react-text-mask": "^5.5.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.2"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
