--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-redux": "^8.0.4",
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
