--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-text-mask": "^5.4.11",
     "axios": "^1.0.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
