--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "prettier": "^2.7.1",
