--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.0.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
     "swiper": "^8.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
