--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.4",
     "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
+    "react-tabs": "^5.1.0",
     "react-text-mask": "^5.5.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.2"
