--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.5.2",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
+    "@types/react-calendar": "^3.5.3",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
