--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-tabs": "^5.1.0",
     "react-text-mask": "^5.5.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
