--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.0.0",
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
+    "leaflet": "^1.9.2",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.4",
     "react-select": "^5.4.0",
@@ -33,6 +35,7 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
