--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
     "leaflet": "^1.9.2",
+    "leaflet-fullscreen": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
+    "@types/leaflet-fullscreen": "^1.0.6",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
