--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^7.5.2",
     "leaflet": "^1.9.2",
     "leaflet-fullscreen": "^1.0.2",
+    "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
