--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-star-rating-component": "^1.4.1",
     "@types/react-text-mask": "^5.4.11",
-    "axios": "^1.0.0",
+    "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
     "leaflet": "^1.9.2",
@@ -37,6 +37,7 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-fullscreen": "^1.0.6",
     "@types/lodash": "^4.14.186",
