--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-star-rating-component": "^1.4.1",
     "@types/react-text-mask": "^5.4.11",
-    "axios": "^1.0.0",
+    "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "framer-motion": "^7.5.2",
+    "leaflet": "^1.9.2",
+    "leaflet-fullscreen": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -23,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.1.0",
     "react-player": "^2.11.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.4",
@@ -34,6 +37,9 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.10",
+    "@types/leaflet": "^1.9.0",
+    "@types/leaflet-fullscreen": "^1.0.6",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
