--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet-fullscreen": "^1.0.6",
