--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet-fullscreen": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "12.3.1",
+    "next-videos": "1.4.1",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
     "react-dom": "18.2.0",
