--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./src/**/*.*",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,json,scss,css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "format": "prettier --write ./src/**/*.*"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
